[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/menu/play/Play.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Play" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Back" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 125.5
margin_top = 1005.0
margin_right = 594.5
margin_bottom = 1104.0
text = "GO_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -234.5
margin_top = -243.0
margin_right = 234.5
margin_bottom = 243.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="League" type="Button" parent="VBoxContainer"]
margin_right = 518.0
margin_bottom = 99.0
text = "TOURNAMENT"

[node name="Arcade" type="Button" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 518.0
margin_bottom = 208.0
text = "ARCADE"

[node name="Single Match" type="Button" parent="VBoxContainer"]
margin_top = 218.0
margin_right = 518.0
margin_bottom = 317.0
text = "P_VS_PC"

[node name="OneVsOne" type="Button" parent="VBoxContainer"]
margin_top = 327.0
margin_right = 518.0
margin_bottom = 426.0
text = "P_VS_P"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/League" to="." method="_on_League_pressed"]
[connection signal="pressed" from="VBoxContainer/Arcade" to="." method="_on_Arcade_pressed"]
[connection signal="pressed" from="VBoxContainer/Single Match" to="." method="_on_Single_Match_pressed"]
[connection signal="pressed" from="VBoxContainer/OneVsOne" to="." method="_on_OneVsOne_pressed"]
